image path update

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <!--	</object>-->
 <!--	</div>-->
 	
-	<object data="../img/headphone.svg" type="image/svg+xml" id="svg-hp" width="60%" height="60%"></object>
-	<object data="../img/microphone.svg" type="image/svg+xml" id="svg-mp" width="60%" height="60%"></object>
+	<object data="/img/headphone.svg" type="image/svg+xml" id="svg-hp" width="60%" height="60%"></object>
+	<object data="/img/microphone.svg" type="image/svg+xml" id="svg-mp" width="60%" height="60%"></object>
 	
 <!--
 	<div style="width:400px; height:400px;">
