--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
 	 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 	<script src="js/index.js"></script>
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 	
-	<object data="/img/headphone.svg" type="image/svg+xml" id="svg-hp" width="100%" height="80%"></object>
-	<object data="/img/microphone.svg" type="image/svg+xml" id="svg-mp" width="100%" height="80%"></object>
+	<object data="img/headphone.svg" type="image/svg+xml" id="svg-hp" width="100%" height="80%"></object>
+	<object data="img/microphone.svg" type="image/svg+xml" id="svg-mp" width="100%" height="80%"></object>
 	
 </body>
 </html>
