--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 	
-	<object data="../img/headphone.svg" type="image/svg+xml" id="svg-hp" width="100%" height="80%"></object>
-	<object data="../img/microphone.svg" type="image/svg+xml" id="svg-mp" width="100%" height="80%"></object>
+	<object data="img/headphone.svg" type="image/svg+xml" id="svg-hp" width="100%" height="80%"></object>
+	<object data="img/microphone.svg" type="image/svg+xml" id="svg-mp" width="100%" height="80%"></object>
 	
 </body>
 </html>
